# Tessera

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: backtest-smoke.yml  ci.yml  docs.yml
configs/: adv_defaults.yaml  backtest.yaml  data.yaml  features.yaml  live.yaml  model.yaml  risk.yaml
data/: README.md
docs/: PHASE_7_REPORT.md  PHASE_8_REPORT.md  PHASE_9_REPORT.md  architecture.md  data.md  features.md  index.md  methodology.md  models.md  pitfalls.md  results.md  runbook.md
docs/figures/: phase7_tearsheet.html  phase8_tearsheet.html
infra/grafana/dashboards/: data_quality.json  live.json  tessera.json
infra/grafana/provisioning/dashboards/: default.yaml
infra/hetzner/: tessera-paper.service
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
notebooks/: 02_triple_barrier_labels.ipynb  02_triple_barrier_labels_executed.ipynb  03_microstructure_features.ipynb  03_microstructure_features_executed.ipynb  04_lightgbm_baseline.ipynb  04_lightgbm_baseline_executed.ipynb  05_meta_labeling.ipynb  05_meta_labeling_executed.ipynb  06_patchtst_sequence_model.ipynb  07_chronos_zeroshot.ipynb  11_ablation_study.ipynb  README.md
paper/: Dockerfile  README.md  demo_script.md  main.tex  refs.bib
paper/demo/: README.md  cast.cast  record_demo.sh
paper/figures/: generate_all.py
scripts/: generate_phase8_tearsheet.py  generate_tearsheet.py
src/tessera/: __init__.py  __main__.py  cli.py  config.py  log.py  logging.py  metrics.py
src/tessera/backtest/: __init__.py  engine.py  fees.py  slippage.py
src/tessera/backtest/reports/: __init__.py  bootstrap.py  deflated_sharpe.py  probabilistic_sharpe.py  stress.py  tearsheet.py
src/tessera/cv/: __init__.py  combinatorial_purged.py  purged_kfold.py  walk_forward.py
src/tessera/data/: __init__.py  ccxt_client.py  ingest_ohlcv.py  store.py  universe.py  validate.py
src/tessera/features/: __init__.py  base.py  cross_sectional.py  funding.py  microstructure.py  regime.py  returns.py  volatility.py
src/tessera/labels/: __init__.py  sample_weights.py  triple_barrier.py
src/tessera/live/: __init__.py  healthcheck.py  paper.py
src/tessera/models/: __init__.py  base.py  chronos_zeroshot.py  ensemble.py  lightgbm_model.py  meta_model.py  patchtst.py  registry.py  tft.py
src/tessera/risk/: __init__.py  circuit_breaker.py  kelly.py  kill_switch.py  limits.py  portfolio_kelly.py  vol_target.py
src/tessera/rl/: __init__.py
src/tessera/strategies/: base.py  ml_directional.py
tests/: conftest.py
tests/fixtures/: build_fixture.py  synthetic_ohlcv.parquet
tests/integration/: test_backtest_smoke.py  test_ingest_ohlcv.py  test_paper_runner.py
tests/property/: test_features_point_in_time.py  test_purged_kfold_property.py  test_validate_property.py
tests/unit/: test_backtest_determinism.py  test_backtest_funding.py  test_backtest_latency.py  test_backtest_oracle.py  test_bootstrap_coverage.py  test_chronos_reproducibility.py  test_config_loads_from_env.py  test_config_secrets_redacted.py  test_cpcv_path_count.py  test_deflated_sharpe.py  test_feature_pipeline.py  test_features_unit.py  test_logging_json.py  test_metrics_registered.py  test_model_base.py  test_model_deterministic.py  test_model_monotonic.py  test_model_save_load.py  test_paper_healthcheck.py  test_patchtst_determinism.py  test_purged_kfold_embargo.py  test_purged_kfold_no_overlap.py  test_risk_circuit_breaker.py  test_risk_kelly.py  test_risk_kill_switch.py  test_risk_limits.py  test_risk_portfolio_kelly.py  test_risk_vol_target.py  test_seed_everything.py  test_slippage.py  test_smoke.py  test_store.py  test_triple_barrier_simple.py  test_triple_barrier_vertical.py  test_universe.py  test_validate.py
