[project]
name = "tessera"
version = "0.1.0"
description = "Mid-frequency ML trading system for crypto perpetual futures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Yash Lunawat" }]

dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    "typer>=0.15,<1",
    "structlog>=25.1,<26",
    "prometheus-client>=0.22,<1",
    "redis>=5.2,<6",
    "pyarrow>=19,<20",
    "duckdb>=1.2,<2",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "pyyaml>=6.0,<7",
    "numpy>=2.1,<3",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.6,<3",
    "lightgbm>=4.5,<5",
    "optuna>=4.2,<5",
    "stable-baselines3>=2.4,<3",
]
exchange = [
    "ccxt>=4.4,<5",
]
backtest = [
    "nautilus-trader>=1.210,<2",
    "vectorbt>=0.26,<1",
    "quantstats>=0.0.64,<1",
    "empyrical-reloaded>=0.5.11,<1",
]
# mlfinlab requires Hudson & Thames private index:
# UV_EXTRA_INDEX_URL=https://pypi.hudsonthames.org/simple/
# mlfinlab = ["mlfinlab>=2.2"]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "pytest-asyncio>=0.25,<1",
    "hypothesis>=6.120,<7",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "black>=24.10,<26",
    "pre-commit>=4.0,<5",
    "pandas-stubs>=2.2,<3",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.27,<1",
]

[project.scripts]
tessera = "tessera.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["tessera"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

# Add [[tool.mypy.overrides]] sections as optional deps get imported:
# ccxt, tardis_dev, lightgbm, optuna, neuralforecast,
# stable_baselines3, nautilus_trader, vectorbt, quantstats,
# empyrical, mlfinlab, duckdb

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["tessera"]
branch = true

[tool.coverage.report]
# TODO: Raise to 80 once feature code lands
fail_under = 0
show_missing = true
