[project]
name = "tessera"
version = "0.1.0"
description = "Mid-frequency ML trading system for crypto perpetual futures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Yash Lunawat" }]

dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "typer==0.25.1",
    "structlog==25.5.0",
    "prometheus-client==0.25.0",
    "redis==5.3.1",
    "pyarrow==19.0.1",
    "duckdb==1.5.2",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pyyaml==6.0.3",
    "numpy==2.4.5",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.6,<3",
    "lightgbm>=4.5,<5",
    "optuna>=4.2,<5",
    "stable-baselines3>=2.4,<3",
    "arch>=7.0,<8",
    "hmmlearn>=0.3,<1",
    "shap>=0.46,<1",
    "joblib>=1.4,<2",
]
exchange = [
    "ccxt>=4.4,<5",
]
backtest = [
    "nautilus-trader>=1.210,<2",
    "vectorbt>=0.26,<1",
    "quantstats>=0.0.64,<1",
    "empyrical-reloaded>=0.5.11,<1",
    "arch>=7.0,<8",
    "scipy>=1.14,<2",
]
# mlfinlab requires Hudson & Thames private index:
# UV_EXTRA_INDEX_URL=https://pypi.hudsonthames.org/simple/
# mlfinlab = ["mlfinlab>=2.2"]
sequence = [
    "pytorch-forecasting>=1.0,<2",
    "lightning>=2.4,<3",
    "chronos-forecasting[torch]>=1.3,<2",
]
dev = [
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    "pytest-asyncio==0.26.0",
    "hypothesis==6.152.7",
    "mypy==1.20.2",
    "ruff==0.15.13",
    "black==25.12.0",
    "pre-commit==4.6.0",
    "pandas-stubs==2.3.3.260113",
    "types-PyYAML==6.0.12.20250516",
    "vcrpy==7.0.0",
    "matplotlib==3.10.3",
    "nbformat>=5.10,<6",
    "jupyter>=1.1,<2",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.27,<1",
]

[project.scripts]
tessera = "tessera.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["tessera"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*", "arch", "arch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hmmlearn", "hmmlearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lightgbm", "lightgbm.*", "optuna", "optuna.*", "joblib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["shap", "shap.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nautilus_trader", "nautilus_trader.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quantstats", "quantstats.*", "vectorbt", "vectorbt.*", "empyrical", "empyrical.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tessera.labels.*", "tessera.cv.*", "tessera.models.*", "tessera.cli"]
disable_error_code = ["misc", "operator", "attr-defined", "arg-type", "return-value", "call-overload", "no-any-return", "unused-ignore", "import-not-found"]

[[tool.mypy.overrides]]
module = ["tessera.features.*"]
disable_error_code = ["misc", "operator", "attr-defined", "arg-type", "return-value", "call-overload", "no-any-return", "unused-ignore", "assignment", "type-var"]

[[tool.mypy.overrides]]
module = ["tessera.strategies.*", "tessera.backtest.*", "tessera.backtest.reports.*"]
disable_error_code = ["misc", "operator", "attr-defined", "arg-type", "return-value", "call-overload", "no-any-return", "unused-ignore", "assignment", "call-arg", "import-not-found"]

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytorch_forecasting", "pytorch_forecasting.*", "lightning", "lightning.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chronos", "chronos.*"]
ignore_missing_imports = true

# Add more [[tool.mypy.overrides]] as optional deps get imported:
# tardis_dev, lightgbm, optuna, neuralforecast,
# stable_baselines3, nautilus_trader, vectorbt, quantstats,
# empyrical, mlfinlab

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["tessera"]
branch = true

[tool.coverage.report]
# TODO: Raise to 80 once feature code lands
fail_under = 0
show_missing = true
